Fix sonar bad smells and update api docs and test coverage